# bevy_web_demos

./: .gitignore  Cargo.toml  Makefile  README  TODO  build_demo  flake.nix  index.html  loader.js  package.list  package.sh  rust-toolchain.toml  style.css  update_server.sh
.github/workflows/: build.yml
assets/models/: Overball.glb
assets/shaders/: blur_shader.wgsl  fragment.frag  vertex.vert
src/: lib.rs  player.rs
src/overball/: components.rs  constants.rs  game_over.rs  game_ui.rs  main_menu.rs  mod.rs  pause_menu.rs  player.rs  resources.rs  states.rs  systems.rs  util.rs  victory.rs
