[package]
name = "web_demos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_rapier3d = "0.27.0"
rand = "0.8.5"
wasm-bindgen = "0.2.92"
bevy_hanabi = "0.12.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bevy-inspector-egui = "0.26.0"

[dependencies.bevy]
version = "0.14.2"
features = ["jpeg", "shader_format_glsl", "mp3", "wav"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"



